--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <div class="product-card">
       <img src="images/m10_wireless_earbuds.jpeg" alt="M10 Earbuds">
       <h3>M10 TWS Wireless Earbuds</h3>
-      <p class="price">মূল্য: ৳649 মাত্র</p>
+      <p class="price">মূল্য: ৳449 মাত্র</p>
       <ul>
         <li>🔋 2500mAh Charging Box (Power Bank হিসেবেও ব্যবহারযোগ্য)</li>
         <li>🎧 HD Stereo Sound & Noise Reduction</li>
@@ -454,6 +454,50 @@
       </ul>
      <a href="#" class="btn order-btn">অর্ডার করুন</a>
     </div>
+
+  <div class="product-card">
+  <img src="images/airpods pro 2nd gen.jpg" alt="AirPods Pro 2nd Gen">
+  <h3>Apple AirPods Pro (2nd Gen)</h3>
+  <p class="price">মূল্য: ৳799 মাত্র</p> 
+  <ul>
+    <li>নতুন প্রযুক্তি ও আরও ভালো ব্যাটারি ব্যাকআপ</li>
+    <li>Crystal Clear সাউন্ড কোয়ালিটি</li>
+    <li>অফিস, বাসা বা চলতে ফিরতে, সব জায়গায় পারফেক্ট</li>
+    <li>অর্ডার করুন আজই, সীমিত স্টকে পাচ্ছেন সেরা দামে!</li>
+    <li>অর্ডার করতে ইনবক্স করুন</li>
+  </ul>
+  <a href="#" class="btn order-btn">অর্ডার করুন</a>
+ </div>
+
+ <div class="product-card">
+  <img src="images/wpg ups.jpg" alt="WGP Mini UPS">
+  <h3>WGP Mini UPS</h3>
+  <p class="price">মূল্য: ৳1850 মাত্র</p>
+  <ul>
+    <li>10400mAh হাই ক্যাপাসিটি ব্যাকআপ</li>
+    <li>রাউটার, ONU, CCTV ও IP ক্যামেরার জন্য উপযুক্ত</li>
+    <li>৬ থেকে ৮ ঘন্টা পর্যন্ত ব্যাকআপ</li>
+    <li>12V/9V/5V মাল্টিপল আউটপুট</li>
+    <li>ওজনে হালকা এবং ব্যবহারে সহজ</li>
+  </ul>
+  <a href="#" class="btn order-btn">অর্ডার করুন</a>
+ </div>
+
+ <div class="product-card">
+  <img src="images/hoco headphone.jpg" alt="Hoco W35 Max Wireless Headphone">
+  <h3>Hoco W35 Max Wireless Bluetooth Headphone</h3>
+  <p class="price">মূল্য: ৳1400 মাত্র</p>
+  <ul>
+    <li>চমৎকার সাউন্ড কোয়ালিটি এবং বেস</li>
+    <li>খুবই আরামদায়ক ওভার-ইয়ার ডিজাইন</li>
+    <li>দীর্ঘ সময় ধরে ব্যবহারের জন্য উপযুক্ত ব্যাটারি</li>
+    <li>স্থিতিশীল ব্লুটুথ সংযোগ</li>
+    <li>কল করার জন্য বিল্ট-ইন মাইক্রোফোন</li>
+  </ul>
+  <a href="#" class="btn order-btn">অর্ডার করুন</a>
+ </div>
+
+
   </section>
 
   <div id="pagination-container"></div>
